--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 discord==2.0.0
 python-dotenv==0.20.0
 google-cloud-logging==3.2.2
+google-cloud-secret-manager==2.12.4
 pytest==7.1.3
 pytest-asyncio==0.19.0
