--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ discord==2.0.0
 python-dotenv==0.20.0
 google-cloud-logging==3.2.2
 google-cloud-secret-manager==2.12.4
+patreon==0.5.0
 pytest==7.1.3
 pytest-asyncio==0.19.0
